attempt to fix windows toast